--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ngrx/effects": "^9.1.0",
+    "@ngrx/store": "^9.1.0",
+    "@ngrx/store-devtools": "^9.1.2",
     "core-js": "^2.5.4",
     "firebase": "^7.14.1",
     "moment": "^2.24.0",
