--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "^9.1.0",
     "@ngrx/store-devtools": "^9.1.2",
     "core-js": "^2.5.4",
+    "date-fns": "^2.16.1",
     "firebase": "^7.14.1",
     "moment": "^2.24.0",
     "rxjs": "~6.5.1",
