--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,11 @@
     "@ngrx/effects": "^9.1.0",
     "@ngrx/store": "^9.1.0",
     "@ngrx/store-devtools": "^9.1.2",
+    "@types/lodash": "^4.14.162",
     "core-js": "^2.5.4",
     "date-fns": "^2.16.1",
     "firebase": "^7.14.1",
+    "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
